problem with column-gap, removed and fixed

--- a/css/style-home.css
+++ b/css/style-home.css
@@ -77,7 +77,7 @@
     height: 100%; /*taking all available height*/
 
     align-items: flex-start; /*positioning with padding instead*/
-    padding-top:3.5vh; /*form is not centered, box/buttons is centered inside of section*/
+    padding-top:3vh; /*form is not centered, box/buttons is centered inside of section*/
 }
 
 #form--home{
@@ -85,7 +85,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, auto); /*row with labels is smaller*/
     align-items: flex-start; /*making sure label and element doesn't separate from each other*/
-    column-gap: 1rem; /*gap only between columns not rows*/
+    gap: 0.7rem; /*gap between elements*/
 
     margin: 0 6rem; /*margin only on sides*/
 
@@ -103,7 +103,7 @@
         align-self: flex-end; /*text is aligned with its element*/
         justify-self: flex-start;
 
-        padding: 0.5rem;
+        padding-left: 0.5rem;
 
         font-size:1.5rem;
         font-weight: 600;
